# hotspot

./: CMakeLists.txt  Dockerfile.mayhem  Mayhemfile  README.md
mayhem/: Dockerfile  Mayhemfile
scripts/compile-test/: Archlinux  Fedora  OpenSuse  Ubuntu
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  perfrecord.cpp  recordpage.cpp  recordpage.h  resultsbottomuppage.cpp  resultsdisassemblypage.cpp  resultsdisassemblypage.h  resultsdisassemblypage.ui  resultssummarypage.cpp  resultssummarypage.ui  resultstopdownpage.cpp  resultsutil.cpp  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  util.cpp  util.h
src/models/: CMakeLists.txt  codedelegate.cpp  codedelegate.h  data.cpp  data.h  disassemblymodel.cpp  disassemblymodel.h  disassemblyoutput.cpp  disassemblyoutput.h  sourcecodemodel.cpp  sourcecodemodel.h  topproxy.cpp  topproxy.h  treemodel.cpp  treemodel.h
src/parsers/perf/: perfparser.cpp  perfparser.h
tests/integrationtests/: tst_perfparser.cpp
tests/modeltests/: CMakeLists.txt
